examples/valid/read/echoChar.wacc
# echo the user's input char
# Output:
# enter a character to echo
# #user input#
# #repeat user input#

#Program:#

begin
	char c = '\0' ;
  println "enter a character to echo";
	read c ;
	println c 
end
