examples/invalid/semanticErr/declaration/basicTypeErr09.wacc
# type mismatch: char <- string
# Output:
# #semantic error#

#Program:#

begin
  char c = "a"
end
